Fix layout for front page on small screens.

--- a/_sass/_blog.sass
+++ b/_sass/_blog.sass
@@ -3,7 +3,7 @@
 
 .blog
   > h1
-    font-size: 3rem
+    font-size: 2.5rem
     margin-top: 0
 
   &__posts
@@ -19,7 +19,7 @@
       text-decoration: none
 
   &__post-title
-    font-size: 1.8rem
+    font-size: 1.5rem
     margin-bottom: 0
     padding-bottom: 0.5rem
 
