--- a/_sass/_front-page.sass
+++ b/_sass/_front-page.sass
@@ -2,31 +2,32 @@
 
 .front-page
   display: flex
-  height: 100vh
+  justify-content: center
+  align-items: center
+  height: 99vh
+  padding: 0.5vh
 
   &__wrapper
     text-align: center
-    position: absolute
-    left: 50%
-    top: 50%
-    transform: translate(-50%,-50%)
-    margin: 0 auto
 
   &__name
     font-family: "RedHook", sans-serif
-    font-size: 10rem
+    font-size: 5rem
     font-weight: normal
     color: $whiteish
     margin: 0.1rem 0
+    @media only screen and (min-width: $lg_screen)
+      font-size: 8rem
 
   &__text
-    font-size: 2rem
     line-height: 1.5
+    @media only screen and (min-width: $lg_screen)
+      font-size: 1.5rem
 
   &__links
     padding: 0
 
   &__link
     display: inline
-    font-size: 5rem
+    font-size: 4rem
     margin: 0 5px
