--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -6,10 +6,11 @@
  */
 html
   font-size: 17px
+  @media only screen and (min-width: $lg_screen)
+    font-size: 20px
 
 body
   background-color: $blackish
-  //overflow: hidden
 
 /*
  * Typography
